fix resize of the terminal with long prompt #919
The problem was that cmd was resized and overflowed then
it was refreshed with new number of columns. This was causing
visible empty lines caused by style of ::before pseudo selector
before the each line (.cmd-line).

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -83,6 +83,7 @@
     scrollbar-gutter: stable;
     height: 100%;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 terminal.terminal-temp {
     visibility: hidden;
@@ -286,6 +287,9 @@ body.full-screen-terminal {
     content: '\0200B';
     width: 0;
     display: inline-block;
+}
+.cmd .cmd-line {
+    white-space: nowrap;
 }
 .terminal span[data-text],
 .cmd span[data-text] {
